refactor: basis arguments (at-tx, current-time) to top-level, remove references to `:basis`
