# http-server/src/main/kotlin/xtdb/http/QueryOptions.kt
@@ -18,12 +18,14 @@ import xtdb.AnySerde.toValue
 import xtdb.api.TransactionKey
 import xtdb.api.query.IKeyFn
 import java.time.Duration
+import java.time.Instant
 import java.time.ZoneId
 
 @Serializable
 data class QueryOptions(
     @Serializable(ArgsSerde::class) val args: Map<String, *>? = null,
-    val basis: Basis? = null,
+    val atTx: TransactionKey? = null,
+    val currentTime: Instant? = null,
     val afterTx: TransactionKey? = null,
     val txTimeout: Duration? = null,
     val defaultTz: ZoneId? = null,
